--- a/src/CSS/Router.css
+++ b/src/CSS/Router.css
@@ -1,3 +1,8 @@
+html, body
+{
+    background-color: #fafafa;
+}
+
 .navbar {
     overflow: hidden;
     position: fixed;
@@ -81,6 +86,11 @@
     text-align: left;
 }
 
+.lol li
+{
+    padding-bottom: 16px;
+}
+
 .contain1 a
 {
     color: white;
@@ -98,4 +108,20 @@
     background-color: #282e3a;
     color: #a1a2a4;
     font-size: 0.9em;
+}
+
+.testtt
+{
+    text-align: center;
+    line-height : 25px;
+}
+
+.lil li
+{
+    padding-bottom: 16px;
+}
+
+.containGlobal h5
+{
+    font-size: 1.2em;
 }
